V1 requirements & architecture review: spec compliance, decoupling, tests
Critical fixes:
- Add TipoDato enum (STRINGA, INTERO, DECIMALE, DATA, BOOLEANO) to Campo
- Add CampoBaseDefinito enum with 8 spec-mandated predefined base fields
- Auto-populate base fields at first launch via fissareCampiBase()

Architecture fixes:
- Add OperationCancelledException to decouple controllers from ConsoleUI
- Remove Categoria import from IOutputView (use Map<String,List<String>>)
- Remove ConsoleUI import from IAppView Javadoc
- Fix IInputView Javadoc to reference OperationCancelledException
- Fix field uniqueness: nomeEsiste checks base+common only (per-category for specific)

Minor fixes:
- Normalize username to lowercase in AuthenticationService
- Add confirmation dialog for common field removal
- Document Persona.equals() getClass() comparison design choice

Tests updated:
- AuthenticationServiceTest: use IUtenteRepository/UtenteData, Optional returns
- CategoriaServiceTest: use new API signatures with TipoDato
- ConfiguratoreControllerTest: use new API, test cross-category field names
- CampoTest: test TipoDato, withObbligatorio, correct equals semantics

https://claude.ai/code/session_01EnXkEQfRYvmw29a3ghgjYg