@@ -1,126 +1,119 @@
 package it.unibs.ingsoft.v1.application;
 
 import it.unibs.ingsoft.v1.domain.Categoria;
-import it.unibs.ingsoft.v1.persistence.AppData;
-import it.unibs.ingsoft.v1.persistence.IPersistenceService;
+import it.unibs.ingsoft.v1.domain.TipoDato;
+import it.unibs.ingsoft.v1.persistence.api.ICategoriaRepository;
+import it.unibs.ingsoft.v1.persistence.dto.CatalogoData;
 import org.junit.jupiter.api.BeforeEach;
 import org.junit.jupiter.api.Test;
 import org.junit.jupiter.api.DisplayName;
 
-import java.util.Arrays;
-import java.util.Collections;
 import java.util.List;
 
 import static org.junit.jupiter.api.Assertions.*;
 
-@DisplayName("V1 – CategoriaService")
+@DisplayName("V1 – CatalogoService")
 class CategoriaServiceTest
 {
-    private AppData data;
-    private CategoriaService service;
+    private CatalogoData catalogo;
+    private CatalogoService service;
     private int saveCount;
 
     @BeforeEach
     void setUp()
     {
-        data = new AppData();
+        catalogo = new CatalogoData();
         saveCount = 0;
-        IPersistenceService mockDb = new IPersistenceService()
+        ICategoriaRepository mockRepo = new ICategoriaRepository()
         {
-            @Override public AppData loadOrCreate() { return data; }
-            @Override public void save(AppData d) { saveCount++; }
+            @Override public CatalogoData load() { return catalogo; }
+            @Override public void save(CatalogoData d) { saveCount++; }
         };
-        service = new CategoriaService(mockDb, data);
+        service = new CatalogoService(mockRepo, catalogo);
     }
 
     // ───────────────────── Campi Base ─────────────────────
 
     @Test
-    @DisplayName("fissareCampiBase with valid list fixes base fields")
-    void fissareCampiBase_validList_fixesFields()
+    @DisplayName("fissareCampiBase populates 8 predefined fields")
+    void fissareCampiBase_populatesPredefinedFields()
     {
-        service.fissareCampiBase(Arrays.asList("Titolo", "Luogo", "Data"));
+        service.fissareCampiBase();
 
-        assertEquals(3, service.getCampiBase().size());
-        assertTrue(data.isCampiBaseFissati());
+        assertEquals(8, service.getCampiBase().size());
+        assertTrue(catalogo.isCampiBaseFissati());
         assertTrue(saveCount > 0);
+    }
+
+    @Test
+    @DisplayName("fissareCampiBase includes Titolo among predefined fields")
+    void fissareCampiBase_includesTitolo()
+    {
+        service.fissareCampiBase();
+        assertTrue(service.getCampiBase().stream()
+                .anyMatch(c -> c.getNome().equals("Titolo")));
     }
 
     @Test
     @DisplayName("fissareCampiBase twice throws IllegalStateException")
     void fissareCampiBase_alreadyFixed_throwsException()
     {
-        service.fissareCampiBase(Arrays.asList("Titolo", "Luogo"));
+        service.fissareCampiBase();
         assertThrows(IllegalStateException.class,
-                () -> service.fissareCampiBase(List.of("Altro")));
+                () -> service.fissareCampiBase());
     }
 
     @Test
-    @DisplayName("fissareCampiBase with empty list throws IllegalArgumentException")
-    void fissareCampiBase_emptyList_throwsException()
+    @DisplayName("fissareCampiBaseConExtra adds extra fields after predefined")
+    void fissareCampiBaseConExtra_addsExtras()
+    {
+        service.fissareCampiBaseConExtra(List.of("Campo Extra"));
+        assertEquals(9, service.getCampiBase().size());
+    }
+
+    @Test
+    @DisplayName("fissareCampiBaseConExtra with duplicate name throws")
+    void fissareCampiBaseConExtra_duplicateName_throwsException()
     {
         assertThrows(IllegalArgumentException.class,
-                () -> service.fissareCampiBase(Collections.emptyList()));
-    }
-
-    @Test
-    @DisplayName("fissareCampiBase with duplicate names throws IllegalArgumentException")
-    void fissareCampiBase_duplicateNames_throwsException()
-    {
-        assertThrows(IllegalArgumentException.class,
-                () -> service.fissareCampiBase(Arrays.asList("Titolo", "titolo")));
-    }
-
-    @Test
-    @DisplayName("fissareCampiBase skips blank entries")
-    void fissareCampiBase_blankEntries_skipped()
-    {
-        service.fissareCampiBase(Arrays.asList("Titolo", "   ", "", "Luogo"));
-        assertEquals(2, service.getCampiBase().size());
-    }
-
-    @Test
-    @DisplayName("fissareCampiBase creates only mandatory fields")
-    void fissareCampiBase_allMandatory()
-    {
-        service.fissareCampiBase(List.of("Titolo"));
-        assertTrue(service.getCampiBase().get(0).isObbligatorio());
+                () -> service.fissareCampiBaseConExtra(List.of("Titolo")));
     }
 
     // ───────────────────── Campi Comuni ─────────────────────
 
     @Test
-    @DisplayName("addCampoComune adds a common field")
+    @DisplayName("addCampoComune adds a common field with TipoDato")
     void addCampoComune_valid_added()
     {
-        service.addCampoComune("Note", false);
+        service.addCampoComune("Note", TipoDato.STRINGA, false);
         assertEquals(1, service.getCampiComuni().size());
         assertEquals("Note", service.getCampiComuni().get(0).getNome());
+        assertEquals(TipoDato.STRINGA, service.getCampiComuni().get(0).getTipoDato());
     }
 
     @Test
     @DisplayName("addCampoComune with name conflicting base field throws")
     void addCampoComune_conflictsWithBase_throwsException()
     {
-        service.fissareCampiBase(List.of("Titolo"));
+        service.fissareCampiBase();
         assertThrows(IllegalArgumentException.class,
-                () -> service.addCampoComune("Titolo", false));
+                () -> service.addCampoComune("Titolo", TipoDato.STRINGA, false));
     }
 
     @Test
     @DisplayName("addCampoComune with duplicate common name throws")
     void addCampoComune_duplicateCommon_throwsException()
     {
-        service.addCampoComune("Note", false);
+        service.addCampoComune("Note", TipoDato.STRINGA, false);
         assertThrows(IllegalArgumentException.class,
-                () -> service.addCampoComune("note", true));
+                () -> service.addCampoComune("note", TipoDato.STRINGA, true));
     }
 
     @Test
     @DisplayName("removeCampoComune removes existing field")
     void removeCampoComune_existing_removed()
     {
-        service.addCampoComune("Note", false);
+        service.addCampoComune("Note", TipoDato.STRINGA, false);
         assertTrue(service.removeCampoComune("Note"));
         assertTrue(service.getCampiComuni().isEmpty());
     }
@@ -136,16 +129,9 @@ class CategoriaServiceTest
     @DisplayName("setObbligatorietaCampoComune updates flag")
     void setObbligatorietaCampoComune_existing_updates()
     {
-        service.addCampoComune("Note", false);
+        service.addCampoComune("Note", TipoDato.STRINGA, false);
         assertTrue(service.setObbligatorietaCampoComune("Note", true));
         assertTrue(service.getCampiComuni().get(0).isObbligatorio());
-    }
-
-    @Test
-    @DisplayName("setObbligatorietaCampoComune with non-existing name returns false")
-    void setObbligatorietaCampoComune_nonExisting_returnsFalse()
-    {
-        assertFalse(service.setObbligatorietaCampoComune("Inesistente", true));
     }
 
     // ───────────────────── Categorie ─────────────────────
@@ -177,85 +163,47 @@ class CategoriaServiceTest
         assertTrue(service.getCategorie().isEmpty());
     }
 
-    @Test
-    @DisplayName("removeCategoria with non-existing name returns false")
-    void removeCategoria_nonExisting_returnsFalse()
-    {
-        assertFalse(service.removeCategoria("Inesistente"));
-    }
-
-    @Test
-    @DisplayName("getCategoriaOrThrow with existing category returns it")
-    void getCategoriaOrThrow_existing_returns()
-    {
-        service.createCategoria("Sport");
-        assertNotNull(service.getCategoriaOrThrow("Sport"));
-    }
-
-    @Test
-    @DisplayName("getCategoriaOrThrow with non-existing throws exception")
-    void getCategoriaOrThrow_nonExisting_throwsException()
-    {
-        assertThrows(IllegalArgumentException.class,
-                () -> service.getCategoriaOrThrow("Inesistente"));
-    }
-
     // ───────────────────── Campi Specifici ─────────────────────
 
     @Test
-    @DisplayName("addCampoSpecifico adds field to the correct category")
+    @DisplayName("addCampoSpecifico adds field to category")
     void addCampoSpecifico_valid_added()
     {
         service.createCategoria("Sport");
-        service.addCampoSpecifico("Sport", "Certificato", true);
+        service.addCampoSpecifico("Sport", "Certificato", TipoDato.BOOLEANO, true);
 
         Categoria cat = service.getCategoriaOrThrow("Sport");
         assertEquals(1, cat.getCampiSpecifici().size());
         assertEquals("Certificato", cat.getCampiSpecifici().get(0).getNome());
+        assertEquals(TipoDato.BOOLEANO, cat.getCampiSpecifici().get(0).getTipoDato());
     }
 
     @Test
     @DisplayName("addCampoSpecifico with name conflicting base field throws")
     void addCampoSpecifico_conflictsWithBase_throwsException()
     {
-        service.fissareCampiBase(List.of("Titolo"));
+        service.fissareCampiBase();
         service.createCategoria("Sport");
         assertThrows(IllegalArgumentException.class,
-                () -> service.addCampoSpecifico("Sport", "Titolo", true));
+                () -> service.addCampoSpecifico("Sport", "Titolo", TipoDato.STRINGA, true));
     }
 
     @Test
-    @DisplayName("addCampoSpecifico with name conflicting common field throws")
-    void addCampoSpecifico_conflictsWithCommon_throwsException()
-    {
-        service.addCampoComune("Note", false);
-        service.createCategoria("Sport");
-        assertThrows(IllegalArgumentException.class,
-                () -> service.addCampoSpecifico("Sport", "Note", true));
-    }
-
-    @Test
-    @DisplayName("removeCampoSpecifico removes existing field")
-    void removeCampoSpecifico_existing_removed()
+    @DisplayName("Same specific field name allowed in different categories")
+    void addCampoSpecifico_sameNameDifferentCategories_allowed()
     {
         service.createCategoria("Sport");
-        service.addCampoSpecifico("Sport", "Cert", true);
-        assertTrue(service.removeCampoSpecifico("Sport", "Cert"));
-    }
-
-    @Test
-    @DisplayName("setObbligatorietaCampoSpecifico updates flag")
-    void setObbligatorietaCampoSpecifico_existing_updates()
-    {
-        service.createCategoria("Sport");
-        service.addCampoSpecifico("Sport", "Cert", true);
-        assertTrue(service.setObbligatorietaCampoSpecifico("Sport", "Cert", false));
+        service.createCategoria("Arte");
+        service.addCampoSpecifico("Sport", "Certificato", TipoDato.BOOLEANO, true);
+        // Should NOT throw — per-category uniqueness only
+        assertDoesNotThrow(
+                () -> service.addCampoSpecifico("Arte", "Certificato", TipoDato.STRINGA, false));
     }
 
     // ───────────────────── Persistence ─────────────────────
 
     @Test
-    @DisplayName("Each mutation triggers db.save")
+    @DisplayName("Each mutation triggers save")
     void mutation_triggersSave()
     {
         int before = saveCount;
